compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_possible_modules_7.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport module\npub fn main() {\n    One\n}"
---
----- SOURCE CODE
-- module.gleam

pub type OneOrTwo {
    One
    Two
}

-- main.gleam

import module
pub fn main() {
    One
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:4:5
  │
4 │     One
  │     ^^^

The custom type variant constructor `One` is not in scope here.
Did you mean one of these:

  - module.One
